[package]
name = "mucell"
version = "0.3.5"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "A cell with the ability to mutate the value through an immutable reference when safe"
#documentation = 
#homepage = 
repository = "https://github.com/chris-morgan/mucell"
readme = "README.md"
keywords = ["cell", "container", "data-structure"]
license = "MIT/Apache-2.0"

[features]
const_fn = []
no_std = []
